--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
       - name: Setup Git for Windows SDK
-        uses: git-for-windows/setup-git-for-windows-sdk@v1
+        uses: git-for-windows/setup-git-for-windows-sdk
         with:
           flavor: full
           architecture: x86_64
@@ -34,7 +34,7 @@ jobs:
           submodules: recursive
 
       - name: Verify Git SDK environment
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -47,7 +47,7 @@ jobs:
           ls -la
 
       - name: Install build dependencies
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -78,12 +78,12 @@ jobs:
           # Check cmake
           if [ -f "/mingw64/bin/cmake.exe" ]; then
             echo "cmake found at: /mingw64/bin/cmake.exe"
+            /mingw64/bin/cmake.exe --version | head -1
             CMAKE_FOUND=true
-            /mingw64/bin/cmake.exe --version | head -1 || echo "Warning: Could not get cmake version"
           elif command -v cmake >/dev/null 2>&1; then
             echo "cmake found in PATH: $(command -v cmake)"
+            cmake --version | head -1
             CMAKE_FOUND=true
-            cmake --version | head -1 || echo "Warning: Could not get cmake version"
           else
             echo "ERROR: cmake not found"
             CMAKE_FOUND=false
@@ -92,12 +92,12 @@ jobs:
           # Check ninja
           if [ -f "/mingw64/bin/ninja.exe" ]; then
             echo "ninja found at: /mingw64/bin/ninja.exe"
+            /mingw64/bin/ninja.exe --version
             NINJA_FOUND=true
-            /mingw64/bin/ninja.exe --version || echo "Warning: Could not get ninja version"
           elif command -v ninja >/dev/null 2>&1; then
             echo "ninja found in PATH: $(command -v ninja)"
+            ninja --version
             NINJA_FOUND=true
-            ninja --version || echo "Warning: Could not get ninja version"
           else
             echo "ERROR: ninja not found"
             NINJA_FOUND=false
@@ -106,15 +106,11 @@ jobs:
           # Check gcc
           if [ -f "/mingw64/bin/gcc.exe" ]; then
             echo "gcc found at: /mingw64/bin/gcc.exe"
-            GCC_FOUND=true
-            /mingw64/bin/gcc.exe --version | head -1 || echo "Warning: Could not get gcc version"
+            /mingw64/bin/gcc.exe --version | head -1
           elif command -v gcc >/dev/null 2>&1; then
             echo "gcc found in PATH: $(command -v gcc)"
-            GCC_FOUND=true
-            gcc --version | head -1 || echo "Warning: Could not get gcc version"
           else
             echo "ERROR: gcc not found"
-            GCC_FOUND=false
           fi
           
           # Check curl
@@ -132,11 +128,9 @@ jobs:
             ls -la /mingw64/bin/ | grep -E "(cmake|ninja)" || echo "No cmake/ninja found"
             exit 1
           fi
-          
-          echo "All critical build tools found."
 
       - name: Download and extract Zig source
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -203,7 +197,7 @@ jobs:
           mv "zig-$ZIG_VERSION" zig-source
 
       - name: Configure build environment
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -233,7 +227,7 @@ jobs:
           EOF
 
       - name: Build Zig (Stage 1 - CMake)
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -353,7 +347,7 @@ jobs:
           ./$ZIG_EXECUTABLE version || echo "Version check continued despite error"
 
       - name: Build Zig (Stage 2 - Self-hosted compiler)
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -394,7 +388,7 @@ jobs:
           fi
 
       - name: Build Zig (Stage 3 - Final optimized compiler)
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -425,7 +419,7 @@ jobs:
           fi
 
       - name: Test the built compiler
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -456,7 +450,7 @@ jobs:
           fi
 
       - name: Create package structure
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -516,7 +510,7 @@ jobs:
           EOF
 
       - name: Create package archive
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
@@ -538,7 +532,7 @@ jobs:
           fi
 
       - name: Test package installation
-        shell: D:/git-sdk-64-makepkg-git/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
+        shell: C:/git-sdk-64/usr/bin/bash.EXE --noprofile --norc -e -o pipefail {0}
         env:
           MSYSTEM: MINGW64
           PATH: /mingw64/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
